--- a/src/assets/stylesheet/_communities.scss
+++ b/src/assets/stylesheet/_communities.scss
@@ -2,6 +2,19 @@
   padding: 1rem;
   height: 100vh;
 }
+.community-search-wrapper {
+  margin: 1rem 0;
+}
+.community-search {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  border: transparent;
+  background-color: rgb(37, 51, 65);
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  outline: none;
+}
 .communities-heading {
   color: aquamarine;
   font-size: 1rem;
@@ -17,8 +30,8 @@
   border-bottom: 1px solid rgb(59, 59, 59);
 }
 .communities-logo {
-  width: 2.3rem;
-  height: 2.3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
   padding: 0.3rem;
   background-color: rgba(0, 0, 0, 0.3);
@@ -30,4 +43,15 @@
   font-weight: 500;
   letter-spacing: 0.08rem;
   margin-left: 1rem;
+}
+.post-btn {
+  color: white;
+  font-size: 1rem;
+  font-weight: 700;
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  background-color: #e6375a;
+  padding: 0.8rem;
+  border-radius: 50%;
 }
