updated with online url

--- a/src/assets/stylesheet/_stories.scss
+++ b/src/assets/stylesheet/_stories.scss
@@ -2,7 +2,12 @@
   height: 100vh;
   width: 100%;
 }
-
+.story-top {
+  position: absolute;
+  top: 2%;
+  z-index: 5;
+  width: 100%;
+}
 .story-cont {
   display: flex;
   align-items: center;
