--- a/src/assets/stylesheet/_general.scss
+++ b/src/assets/stylesheet/_general.scss
@@ -7,6 +7,16 @@
     margin: 0 auto;
     // border: 3px solid #1f364d;
   }
+  .story-top {
+    width: 300px;
+    padding-top: 0.5rem;
+  }
+  .story-bar {
+    width: 300px;
+  }
+  .story-bar-wrapper {
+    padding: 1rem 0;
+  }
   .story-card {
     width: 100%;
   }
@@ -25,6 +35,16 @@
   .story-card {
     width: 100%;
   }
+  .story-top {
+    width: 300px;
+    padding-top: 0.5rem;
+  }
+  .story-bar {
+    width: 300px;
+  }
+  .story-bar-wrapper {
+    padding: 1rem 0;
+  }
   .story-cont {
     width: 300px;
   }
@@ -41,6 +61,16 @@
   .story-card {
     width: 100%;
   }
+  .story-top {
+    width: 300px;
+    padding-top: 0.5rem;
+  }
+  .story-bar {
+    width: 300px;
+  }
+  .story-bar-wrapper {
+    padding: 1rem 0;
+  }
   .story-cont {
     width: 300px;
   }
@@ -56,6 +86,16 @@
   }
   .story-card {
     width: 100%;
+  }
+  .story-top {
+    width: 300px;
+    padding-top: 0.5rem;
+  }
+  .story-bar {
+    width: 300px;
+  }
+  .story-bar-wrapper {
+    padding: 1rem 0;
   }
   .story-cont {
     width: 300px;
